@@ -1,3 +1,6 @@
+[B]3.3.0[/B]
+- Improved search query function, added accompanying option
+
 [B]3.2.5[/B]
 - Tweaked imports
 
